# WorldPulse

./: README.md  docker-compose.yaml  werf-giterminism.yaml  werf.yaml
.github/workflows/: product_deployment.yml
.helm/templates/: all-services.yml  ml-service-deployment.yml  news-parser-deployment.yml  news-sender-deployment.yml  telegram-bot-deployment.yml
docs/: worldpulse_openapi.yaml
services/example-service-skeleton/: .openapi-generator-ignore  Dockerfile  openapi.yaml  setup.cfg
services/example-service-skeleton/.openapi-generator/: FILES
services/example-service-skeleton/docs/: api.yaml
services/example-service-skeleton/src/endpoints/: __init__.py  main.py
services/example-service-skeleton/src/endpoints/apis/: greeting_api.py  greeting_api_base.py
services/example-service-skeleton/src/endpoints/models/: get_greeting200_response.py
services/example-service-skeleton/src/endpoints/views/: GreetingApi.py
services/example-service-skeleton/tests/: test_greeting_api.py
services/ml-processor/: .gitignore  .openapi-generator-ignore  Dockerfile  docker-compose.yaml  extra_req.txt  openapi.yaml  setup.cfg
services/news-parser/: .openapi-generator-ignore  Dockerfile  docker-compose.yaml  extra_req.txt  openapi.yaml  setup.cfg
services/news-sender/: .gitignore  .openapi-generator-ignore  Dockerfile  extra_req.txt  openapi.yaml  setup.cfg
services/telegram-bot/: .openapi-generator-ignore  Dockerfile  README.md  docker-compose.yaml  extra_req.txt  openapi.yaml  setup.cfg
tools/scripts/: prepare_env.sh  wp_tool.sh
(+125 files in other folders)
